# quant-backtester

./: .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  DOCS-INDEX.md  FEATURES.md  README.md  ROADMAP.md  SPRINTS.md  backtester-architecture.md  backtester-research-spike.html  pyproject.toml
.claude/plans/: backtester-v0-5-launch-wedge.plan.md  backtester-v0-5-m2-trust-visible.plan.md  backtester-v0-5-m3-forward-validation.plan.md  backtester-v0-5-m4-csv-temp-cleanup.plan.md  backtester-v0-5-m4-host-lock.plan.md  backtester-v0-5-m4-web-ui.plan.md
.claude/prds/: backtester-v0-5-launch-wedge.prd.md
backtester/: cli.py  forward.py  web.py
backtester-0.1.0/backtester/engine/: __init__.py
backtester/analytics/: __init__.py  metrics.py  stats.py  tearsheet.py
backtester/analytics/tests/: test_analytics.py
backtester/audit/: __init__.py  audit.py  report.py
backtester/audit/tests/: __init__.py  test_audit.py
backtester/core/: __init__.py  config.py  context.py  hashing.py  models.py  protocol.py  result.py
backtester/core/tests/: test_contracts.py
backtester/costs/: __init__.py  base.py  models.py  registry.py
backtester/costs/tests/: test_costs.py
backtester/data/: __init__.py  adapters.py  loader.py  universe.py
backtester/data/tests/: test_data.py
backtester/engine/: engine.py  fill.py  portfolio.py
backtester/examples/: __init__.py  config.yaml  leaky.py  sma_crossover.py
backtester/indicators/: __init__.py  precompute.py  signals.py  technical.py
backtester/tests/: test_packaging.py  test_web.py
examples/: config.yaml
(+5 files in other folders)
