[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backtester"
version = "0.1.0"
description = "Stock-only backtesting platform with a no-look-ahead-by-default engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "pandas",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "pyyaml",
    "typer",
]

[project.scripts]
bt = "backtester.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["backtester*"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["backtester"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
